tests/baselines/reference/parserImportDeclaration1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/parserImportDeclaration1.ts (1 errors) ====
    import TypeScript = TypeScriptServices.TypeScript;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TypeScriptServices'.